パッケージ.jsonの変更: "rmove"を"remove"に修正

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "ts-node src/index.ts",
         "build": "rimraf dist && tsc",
         "dev": "nodemon src/index.ts",
-        "rmove": "ts-node src/fileremove.ts"
+        "remove": "ts-node src/fileremove.ts"
     },
     "author": "",
     "license": "ISC",
